# myco

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
kernels/compute-shader/: Cargo.toml
kernels/compute-shader/src/: lib.rs
src/: compute.rs  device.rs  lib.rs  main.rs  tensor.rs
